dessign basic index page

--- a/decision/templates/decision/index.html
+++ b/decision/templates/decision/index.html
@@ -4,10 +4,18 @@
   <head>
     <title>Decision Maker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link ref="stylesheet" type="text/css" href="{% static 'decision/index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'decision/style/index.css' %}">
   </head>
   <body>
-    <div class="backgroun">
+    <div class="info">
+      <h1>Decision Maker: Voting for Best Choice</h1>
+      <div>
+        <button>Create</button>
+        <button>Vote</button>
+      </div>
+      <p>Decision Maker is a web app that helps groups of friends to vote on a preferred choice (using ranked voting)</p>
+    </div>
+    <div class="background">
       <div></div>
       <div></div>
       <div></div>
