basic style for new form

--- a/decision/templates/decision/new.html
+++ b/decision/templates/decision/new.html
@@ -1,3 +1,44 @@
 {% include './partials/_header.html' %}
 
+
+<form class="pure-form pure-form-aligned new">
+    <fieldset>
+        <div class="pure-control-group">
+            <label>Activity</label>
+            <input name="activity" type="text" placeholder="What activity you want to create?" required>
+        </div>
+
+        <div class="pure-control-group">
+            <label>Your Name</label>
+            <input name="name" type="text" placeholder="This name will be displayed">
+        </div>
+
+        <div class="pure-control-group">
+            <label>Email</label>
+            <input name="email" type="email" placeholder="What email you want to be notified">
+        </div>
+
+        <div class="pure-control-group">
+            <label>description</label>
+            <textarea name="description" placeholder="Write a description about your activity"></textarea>
+        </div>
+
+        <div class="options">
+            <div class="pure-control-group">
+                <label>Option 1</label>
+                <input name="option1" type="text" placeholder="Option 1">
+            </div>
+            <div class="pure-control-group">
+                <label>Option 2</label>
+                <input name="option2" type="text" placeholder="Option 2">
+            </div>
+            <div class="pure-control-group">
+                <label>Option 3</label>
+                <input name="option3" type="text" placeholder="Option 3">
+            </div>
+        </div>
+        <button type="submit" class="pure-button pure-button-primary">Submit</button>
+    </fieldset>
+</form>
+
 {% include './partials/_footer.html' %}
