make db migration

--- a/decision/templates/decision/new.html
+++ b/decision/templates/decision/new.html
@@ -37,7 +37,7 @@
                 <input name="option3" type="text" placeholder="Option 3">
             </div>
         </div>
-        <button type="submit" class="pure-button pure-button-primary">Submit</button>
+        <button type="submit" class="pure-button pure-button-primary">Create Activity</button>
     </fieldset>
 </form>
 
