--- a/decision/templates/decision/partials/_header.html
+++ b/decision/templates/decision/partials/_header.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <link rel='stylesheet' href="{% static 'decision/style/header.css' %}">
     <link rel='stylesheet' href="{% static 'decision/style/new.css' %}">
+    <link rel='stylesheet' href="{% static 'decision/style/show.css' %}">
   </head>
   <body>
     <!-- navigation bar session  -->
