--- a/decision/templates/decision/success.html
+++ b/decision/templates/decision/success.html
@@ -1,5 +1,95 @@
 {% include './partials/_header.html' %}
 
+<div class="graph">
+    <p class="message">Thank you for voting. The final results will be released on {{ activity.expire_on }}</p>
+    <p>The current voting results for <strong>{{ activity.context }}</strong> are as follows: </p>
+    <table class="pure-table pure-table-horizontal">
+        <thead>
+            <tr>
+                <th>Options</th>
+                <th>Votes</th>
+            </tr>
+        </thead>
+    
+        <tbody>
+          {% for choice in choice_list %}
+          <tr>
+              <td>{{ choice.name }}</td>
+              <td>{{ choice.votes_count }}</td>
+          </tr>
+          {% endfor %}
+          <tr>
+            <td colspan='2'>
+                <canvas id="myChart"></canvas>
+            </td>
+          </tr>
+        </tbody>
+    </table>
+    <a class="pure-button pure-button-primary" href="{% url 'decision:index' %}">Exit</a>
+</div>
+
+<script>
+var ctx = document.getElementById("myChart").getContext('2d');
+
+// obtain data from django and convert into js object
+var choice_list = "{{ choice_list }}"
+choice_list = choice_list.replace(/&#39;/g, "\"")
+choice_list = JSON.parse(choice_list)
+console.log(choice_list)
+var labels = [];
+var data = []
+
+
+choice_list.forEach(function(choice){
+  labels.push(choice.name);
+  data.push(choice.votes_count)
+})
+
+var myChart = new Chart(ctx, {
+    type: 'pie',
+    data: {
+        labels,
+        datasets: [{
+            label: '# of Votes',
+            data,
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+});
+
+var message = document.getElementsByClassName('message')[0];
+
+function fade(element) {
+    var op = 1;  // initial opacity
+    var timer = setInterval(function () {
+        if (op <= 0.1){
+            clearInterval(timer);
+            element.style.visibility = 'hidden';
+        }
+        element.style.opacity = op;
+        element.style.filter = 'alpha(opacity=' + op * 100 + ")";
+        op -= op * 0.1;
+    }, 200);
+}
+
+fade(message)
+</script>
 
 
 {% include './partials/_footer.html' %}
