--- a/decision/static/decision/style/index.css
+++ b/decision/static/decision/style/index.css
@@ -29,6 +29,20 @@ html, body {
   width: 100%;
 }
 
+.glass {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(50, 50, 50, 0.75);
+  z-index: 2;
+}
+
+.hidden {
+  display: none;
+}
+
 .background div {
   position: absolute;
   top:0;
@@ -43,8 +57,22 @@ html, body {
   animation: imageAnimation 50s linear infinite;
 }
 
-.info button {
+.token {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 2;
+  width: 400px;
+  height: 300px;
+  background-color: #ccc;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+
+.info a {
   border: 0px;
+  text-decoration: none;
   font-size: 2em;
   padding: .2em 1em;
   min-width: 5em;
@@ -53,22 +81,22 @@ html, body {
   transition: background 1s, color 1s;
 }
 
-.info button:nth-child(1){
+.info a:nth-child(1){
   border: 2px solid rgb(28, 184, 65);
   color: rgb(28, 184, 65)
 }
 
-.info button:nth-child(2){
+.info a:nth-child(2){
   border: 2px solid rgb(225, 117, 20);
   color: rgb(223, 117, 20)
 }
 
-.info button:nth-child(1):hover{
+.info a:nth-child(1):hover{
   background: rgb(28, 184, 65);
   color: #fff;
 }
 
-.info button:nth-child(2):hover{
+.info a:nth-child(2):hover{
   background: rgb(223, 117, 20);
   color: #fff;
 }
