--- a/decision/static/decision/style/index.css
+++ b/decision/static/decision/style/index.css
@@ -57,17 +57,48 @@ html, body {
   animation: imageAnimation 50s linear infinite;
 }
 
-.token {
+.token, .admin {
   position: absolute;
   top: 20%;
   left: 50%;
   transform: translate(-50%);
   z-index: 2;
   width: 400px;
-  height: 300px;
-  background-color: #ccc;
+  height: 150px;
+  background-color: #f3f3f3;
   border-radius: 5px;
   border: 1px solid gray;
+}
+
+.token h3, .admin h3 {
+  color: rgba(50, 50, 50, 0.9);
+  width: 80%;
+  margin: 10px auto;
+}
+
+.token input, .admin input {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 6px;
+  border: 1px solid gainsboro;
+  font-size: 1.2em;
+  padding: 8px;
+}
+
+.token a, .admin a {
+  text-decoration: none;
+  font-size: 1.1em;
+  padding: 3px 0;
+  color: #fff;
+  background-color:rgb(30, 200, 65);
+  border: 1px solid rgb(30, 200, 65);
+  border-radius: 4px;
+  display: block;
+  width:30%;
+  margin-left: 10%;
+  margin-top: 10px;
+  text-align: center;
 }
 
 .info a {
@@ -91,6 +122,11 @@ html, body {
   color: rgb(223, 117, 20)
 }
 
+.info a:nth-child(3){
+  border: 2px solid rgb(135,160,223);
+  color: rgb(135,160,223)
+}
+
 .info a:nth-child(1):hover{
   background: rgb(28, 184, 65);
   color: #fff;
@@ -98,6 +134,11 @@ html, body {
 
 .info a:nth-child(2):hover{
   background: rgb(223, 117, 20);
+  color: #fff;
+}
+
+.info a:nth-child(3):hover {
+  background: rgb(135,160,223);
   color: #fff;
 }
 
