--- a/decision/templates/decision/partials/_header.html
+++ b/decision/templates/decision/partials/_header.html
@@ -11,6 +11,7 @@
     <link rel='stylesheet' href="{% static 'decision/style/new.css' %}">
     <link rel='stylesheet' href="{% static 'decision/style/show.css' %}">
     <link rel='stylesheet' href="{% static 'decision/style/success.css' %}">
+    <link rel='stylesheet' href="{% static 'decision/style/admin.css' %}">
   </head>
   <body>
     <!-- navigation bar session  -->
