--- a/decision/static/decision/style/index.css
+++ b/decision/static/decision/style/index.css
@@ -64,7 +64,7 @@ html, body {
   transform: translate(-50%);
   z-index: 2;
   width: 400px;
-  height: 150px;
+  height: 200px;
   background-color: #f3f3f3;
   border-radius: 5px;
   border: 1px solid gray;
@@ -86,7 +86,7 @@ html, body {
   padding: 8px;
 }
 
-.token a, .admin a {
+.token a, .admin button {
   text-decoration: none;
   font-size: 1.1em;
   padding: 3px 0;
