--- a/decision/templates/decision/admin.html
+++ b/decision/templates/decision/admin.html
@@ -1,5 +1,7 @@
 {% include './partials/_header.html' %}
 
+{% load static %}
+
 <h3 class="admin-title">Belows are the information about your activity: {{ activity.context }}</h3>
 <main class="admin-page">
     <form class="pure-form pure-form-aligned edit" action="{% url 'decision:update' activity.id %}" method="post">
@@ -24,7 +26,10 @@
               {% endfor %}
 
             </div>
-            <button type="submit" class="pure-button pure-button-primary">Update Activity</button>
+            <div class="button-group">
+                <button type="submit" class="pure-button pure-button-primary">Update Activity</button>
+                <button type="button" class="pure-button pure-button-primary" id="add-option">Add options</button>
+            </div>
         </fieldset>
     </form>
 
@@ -100,4 +105,5 @@
      
     </script>
 
+    <script src="{% static 'decision/javascript/addOption.js'%}"></script>
 {% include './partials/_footer.html' %}
