restful create test

--- a/decision/templates/decision/new.html
+++ b/decision/templates/decision/new.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="pure-control-group">
-            <label>description</label>
+            <label>Description</label>
             <textarea name="description" placeholder="Write a description about your activity"></textarea>
         </div>
 
