create success page

--- a/decision/templates/decision/partials/_header.html
+++ b/decision/templates/decision/partials/_header.html
@@ -12,6 +12,7 @@
     <link rel='stylesheet' href="{% static 'decision/style/show.css' %}">
     <link rel='stylesheet' href="{% static 'decision/style/success.css' %}">
     <link rel='stylesheet' href="{% static 'decision/style/admin.css' %}">
+    <link rel='stylesheet' href="{% static 'decision/style/info.css' %}">
   </head>
   <body>
     <!-- navigation bar session  -->
